@@ -2,33 +2,30 @@ package com.crud.task.mapper;
 
 import com.crud.task.domain.Task;
 import com.crud.task.domain.TaskDto;
-import org.springframework.stereotype.Service;
+import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Service
+@Component
 public class TaskMapper {
-
     public Task mapToTask(final TaskDto taskDto) {
         return new Task(
                 taskDto.getId(),
                 taskDto.getTitle(),
-                taskDto.getContent()
-        );
+                taskDto.getContent());
     }
 
     public TaskDto mapToTaskDto(final Task task) {
         return new TaskDto(
                 task.getId(),
                 task.getTitle(),
-                task.getContent()
-        );
+                task.getContent());
     }
 
-//    public List<TaskDto> mapToTaskDtoList(final List<Task> taskList) {
-//        return taskList.stream()
-//                .map(this::mapToTaskDto)
-//                .toList();
-//    }
-
+    public List<TaskDto> mapToTaskDtoList(final List<Task> taskList) {
+        return taskList.stream()
+                .map(t -> new TaskDto(t.getId(), t.getTitle(), t.getContent()))
+                .collect(Collectors.toList());
+    }
 }
